# CoffeeShopApp

./: Angajat.cpp  Angajat.h  Barista.cpp  Barista.h  CMakeLists.txt  CSVHandler.cpp  CSVHandler.h  Client.cpp  Client.h  Comanda.cpp  Comanda.h  EvenimenteSpeciale.cpp  EvenimenteSpeciale.h  Manager.cpp  Manager.h  Ospatar.cpp  Ospatar.h  Produs.cpp  Produs.h  README.md  main.cpp
